sumo/tests/traci/VariableRetrieval/Vehicle/errors/UnknownID/errors.traci
Error: Answered with error to command 164: Vehicle 'xxx' is not known
